Update with Viee Records and EF Code First

--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -31,3 +31,5 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </div>
 </form>
+
+<a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="viewRecords">View Employees</a>
